--- a/addon/src/i18n/data/en.json
+++ b/addon/src/i18n/data/en.json
@@ -2,6 +2,7 @@
   "config_header_text": "ac-predictor settings",
 
   "config_hideDuringContest_label": "hide prediction during contests",
+  "config_hideUntilFixed_label": "hide prediction until performances are fixed",
   "config_useFinalResultOnVirtual_label": "use result at the end as a performance reference during virtual participation",
 
   "config_dropdown": "ac-predictor",
