--- a/addon/src/i18n/data/en.json
+++ b/addon/src/i18n/data/en.json
@@ -3,7 +3,8 @@
 
   "config_hideDuringContest_label": "hide prediction during contests",
   "config_hideUntilFixed_label": "hide prediction until performances are fixed",
-  "config_useFinalResultOnVirtual_label": "use result at the end as a performance reference during virtual participation",
+  "config_useFinalResultOnVirtual_label": "use final result as a performance reference during the virtual participation",
+  "config_useFinalResultOnVirtual_description": "If enabled, the performance is calculated as if the original participant had already done the contest.",
 
   "config_dropdown": "ac-predictor",
 
