--- a/addon/src/i18n/data/ja.json
+++ b/addon/src/i18n/data/ja.json
@@ -2,8 +2,9 @@
   "config_header_text": "ac-predictor 設定",
 
   "config_hideDuringContest_label": "コンテスト中に予測を非表示にする",
-  "config_hideUntilFixed_label": "パフォーマンスが確定するまで非表示にする",
-  "config_useFinalResultOnVirtual_label": "バーチャル参加時のパフォーマンス表示に最終結果を用いる",
+  "config_hideUntilFixed_label": "パフォーマンスが確定するまで予測を非表示にする",
+  "config_useFinalResultOnVirtual_label": "バーチャル参加時のパフォーマンス計算に最終結果を用いる",
+  "config_useFinalResultOnVirtual_description": "チェックを入れると、当時の参加者が既にコンテストを終えているものとしてパフォーマンスを計算します。",
 
   "config_dropdown": "ac-predictor 設定",
 
